# derailed

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  LICENSE.md  README.md  bun.lockb  docker-compose.dev.yaml  docker-compose.prod.yaml  entrypoint.sh  gateway.proto  mix.exs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cla.yml
.sqlx/: query-00bb042e519f1c6f3aeb442c980faa6db2aecb56e4a193703c7937766a8c56c5.json  query-00cd84a2200e4add238cf580ca373a823e9844366b9f0ecb7044ac9692508c42.json  query-014f11a60ed19ac6be1e3b744fbf6127816484c5f14dc84df03f4c294e0754d2.json  query-0b4df8624845363324ef16a6da79d7275c63593f1b09e851bf694ba865bb9c22.json  query-212da4242063bdbe524ceaa90e3770fc9e24771b76fc3a3f159b6aa605db625e.json  query-2a31edd467485becb9fb2d0d649c5350389f1c0b494230857356edafd513bef4.json  query-30b0059e407d90eae30a5d646886e1be4bf3f5d907b2d5aeed96adf0a12cf899.json  query-36e1fd4069ceea6bec6f1e5e726815f4259b895d6920d0324d8132a845ab691d.json  query-379d8037c0650e26933525b3ee3d2a09f3e10c0041ac233e0148354e2c80057f.json  query-46552c551348cfb1b41b754be79f1e5d54fc3b108af5da3076c48ec3d7882cb4.json  query-5200f04176813eecaad5b32376879db8e7ffe8e30e53e3b23313b2ba522cdc3d.json  query-557c063566407ceed78fe2f16102587d761aceaf5474b641b619003a31833bb6.json  query-59b6ff712bf5336e3822b455e3d7fc1cfd581a28107e14f75a8eab37c4a4e01c.json  query-59c80ce5ffae7a2d3874bdf7de2aae53cdeb8bfa0e58316f35b7b0a51bd44904.json  query-714582ae0ab1be051c799b9fbcff800b927730668ef935464101545d83f47c5f.json  query-7b62329380a19ed54cb17d9f3090cd72ffd2e9030633dcad4f794f2999567bf9.json  query-819bea08c2124cd8e0875f08ab097b8e186dbab3c2adb6595651bcd09a11be80.json  query-8a33efce0b8977d28367bab550ee8f2eaa1fa99944f113dd9ab6dde27166fea9.json  query-91e14cf0d63f6730568597390f8aa677ca4a3a609cd9b596334e5c0d00b3c6e2.json  query-95e656792ebd78226f7fe323ef1f4616047426be0cd3887f1461fc93e99af830.json  query-9abf3ddd2eac998c8423d67e2b203414db3edcf64fc5370e96bfb138dede001a.json  query-9b9beb71ce1db670682ceba991b8880dc8ea2cbb6311a96d1d11480e3136ec5f.json  query-a1186abdedc4fd175760f01d3ef88e153b3702b2fcd1f30278dc7b11f65f4a74.json  query-a798643a18d475f8e7d7a3d25a1ab21af8d5d570fa4b734bab2198db89c67c3d.json  query-af10019b8e762d6667b77ac440d2040cac162678161dca7c2c630c67a2921465.json  query-bd990bdc6bdd506e73e0b976374c04637962c849bff0522efb718cf64428e711.json  query-c4aa8c6d7e5a567a6fb14065e0860e4b57d30092803794c46c3ad758e5d7147c.json  query-c9ea5f5422aec4ff73a644436d3013a226115f28977ffc4bc455b94500fe873b.json  query-d21398596055bb0dc0d35afd02fd6161c2a81b943610a696fbf39a24b328f8be.json  query-d3efa4f4fc4bc4a732db141ad11e9acac597a02638aee6ee98139c53bb7cacd5.json  query-d5395614405e3c560030d456ed16da8f5b07c9a70ef7ce16438aec6317a0098b.json  query-d750bdef7449efb4894f08935bf7e9c050eb9592f2f0c861a3c30c2616786e3e.json  query-d7b7fb704de6bfef294ea65ec07572d7a267c93d7daf8a94e17ce0a37c171ba6.json  query-edc43a70cc30ced6e73bbf5b8961d68ca6307bd6bca9d8a072929b3cc022758a.json  query-f787cab6a65b94cc32a6c68e7983481ef960a1a1cd3b759900fbcad61d607830.json
api/: Cargo.toml  Dockerfile  entrypoint.sh  pyproject.toml
api/derailed/: __init__.py  accounts.py  db.py  emails.py  messages.py  missing.py  models.py  relationships.py  utils.py
api/derailed/gateway/: __init__.py  gateway_pb2.py  gateway_pb2.pyi  gateway_pb2_grpc.py
api/derailed/templates/: email-verify.mjml
api/emails/: email-verify.mjml
api/migrations/: 20250521075037_initial.sql  20250522070151_sessions.sql  20250522144203_messages.sql  20250522154128_case_insensitive_username.sql  20250524160530_relationships.sql  20250524164346_consolidate_channels.sql  20250524165004_guild_roles_guild_id.sql  20250525074915_read_states.sql  20250525080237_mentions.sql  20250602213915_the_great_DROP_TABLE_IF_EXISTS.sql
api/src/: main.rs  snow.rs
app/: .dockerignore  .eslintrc.cjs  Dockerfile  convex.json  package.json  svelte.config.js
app/src/: app.css  app.html  hooks.server.ts
app/src/convex/: messages.ts  readstates.ts  schema.ts  types.ts  users.ts
app/src/lib/: api.ts  events.ts  gateway.ts  markdown.ts  models.ts  remarkToNewLine.ts  rt.ts  state.ts
app/src/routes/: +layout.server.ts  +layout.svelte  +page.svelte
app/static/policies/: privacy.md  terms.md
beam/: Cargo.toml
beam/migrations/: 20241207051216_initial.sql
beam/src/: main.rs
components/generic/: ModalButton.tsx  package.json  tsconfig.json
config/: config.example.exs
crates/api/: Cargo.toml
crates/api/src/: main.rs
crates/api/src/routes/: mod.rs  rt.rs
crates/api/src/routes/accounts/: email.rs  login.rs  mod.rs  modify.rs  register.rs  reset.rs
crates/api/src/routes/actors/: assets.rs  follow.rs  mod.rs  modify.rs
crates/api/src/routes/channels/: mod.rs
crates/api/src/routes/messaging/: create.rs  delete.rs  list.rs  mark.rs  mod.rs  modify.rs
crates/api/src/utils/: middleware.rs  mod.rs  publishing.rs
crates/models/src/: channels.rs  messages.rs  users.rs
crates/rt-actors/: Cargo.toml
crates/rt_actors/: Cargo.toml
crates/ttl_dashmap/: Cargo.toml
derailed-app/: package.json
derailed-app/src/: app.css
diesel/: package.json
diesel/app/: layout.tsx
gateway/: .dockerignore  Dockerfile  Dockerfile.dev  mix.exs
hazel/: package.json
migrations/: 20250610091611_init.sql  20250611104949_last_message_id.sql  20250612041000_relationships.sql  20250705143040_nonce.sql
modules/api/: mix.exs
modules/database/: mix.exs
personality/: Cargo.toml  README.md
personality/migrations/: 20241205103806_initial.sql
personality/src/: depot.rs  error.rs  main.rs  produce.rs  state.rs  token.rs  ws.rs
personality/src/db/: account.rs  actor.rs  mod.rs  session.rs  tent.rs  track.rs
personality/src/routes/: mod.rs  tracks.rs  users.rs
raildepot/: Cargo.toml  Dockerfile  README.md
raildepot/migrations/: 20241205090250_initial.sql  20241206091507_tombstone.sql
raildepot/src/: error.rs  lib.rs  main.rs
site/: package.json
site/src/: content.config.ts  global.css
(+117 files in other folders)
