[workspace]
resolver = "2"
members = [ "personality", "raildepot" , "beam" ]

[workspace.dependencies]
tokio = { version = "1", features = [ "full" ] }
axum = { version = "0.7", features = [ "ws", "macros" ] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "sqlite", "macros", "chrono" ] }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
serde_valid = "0.25"
regex = "1"
argon2 = "0.5"
uuid7 = "1.1.0"
jsonwebtoken = "9"
chrono = "0.4"
dotenvy = "0.15"
bitflags = "2"
futures-util = "0.3"
tower-http = { version = "0.6", features = [ "cors" ] }
nanoid = "0.4"
vodozemac = "0.8"
reqwest = { version = "0.12", features = ["json"] }
thiserror = "2"
axum_thiserror = "0.1.0"
pulsar = "6"

personality = { path = "./personality" }
raildepot = { path = "./raildepot" }
beam = { path = "./beam" }
