[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiocache>=0.12.3",
    "aiosmtplib>=4.0.1",
    "argon2-cffi>=23.1.0",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.115.12",
    "mjml>=0.11.1",
    "snowflake-id>=1.0.2",
]
authors = [
  {name = "Paillat-dev", email = "me@paillat.dev"},
  ]

[dependency-groups]
dev = [
    "asyncpg-stubs>=0.30.1",
    "black>=25.1.0",
    "isort>=6.0.1",
]
