[project]
name = "api"
version = "0.0.0"
description = "The Derailed API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiocache>=0.12.3",
    "aiosmtplib>=4.0.1",
    "argon2-cffi>=23.1.0",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.115.12",
    "grpcio>=1.71.0",
    "grpcio-tools>=1.71.0",
    "jinja2[async]>=3.1.6",
    "mjml>=0.11.1",
    "python-dotenv>=1.1.0",
    "snowflake-id>=1.0.2",
]

[dependency-groups]
dev = [
    "asyncpg-stubs>=0.30.1",
    "black>=25.1.0",
    "grpc-stubs>=1.53.0.6",
    "isort>=6.0.1",
    "types-grpcio>=1.0.0.20250525",
]
